# ray-tracing

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
src/: camera.cpp  camera.h  color.cpp  color.h  dielectric.cpp  dielectric.h  hittable-list.cpp  hittable-list.h  hittable.cpp  hittable.h  lambertian.cpp  lambertian.h  main.cpp  material.h  metal.cpp  metal.h  ray.cpp  ray.h  sphere.cpp  sphere.h  utils.cpp  utils.h  vector3.cpp  vector3.h
